[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "gen-pypi-token"
version = "0.0.0"
description = "Generate per-project PyPI tokens."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/gen-pypi-token"
"Issue Tracker" = "https://github.com/domdfcoding/gen-pypi-token/issues"
"Source Code" = "https://github.com/domdfcoding/gen-pypi-token"

[project.scripts]
gen-pypi-token = "gen_pypi_token.__main__:main"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "gen_pypi_token"

[tool.importcheck]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
